about slot · simple

--- a/vue/组件/组件化开发/2020年7月14日-父子组件通信回顾.html
+++ b/vue/组件/组件化开发/2020年7月14日-父子组件通信回顾.html
@@ -22,7 +22,7 @@
       </div>
     </template>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       const cpn = {
         template: '#cpn',
