--- a/vue/组件/组件化开发/2020年7月1日-为什么组件data必须要是函数.html
+++ b/vue/组件/组件化开发/2020年7月1日-为什么组件data必须要是函数.html
@@ -18,7 +18,7 @@
       <cpn2></cpn2>
     </div>
     
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       /*
         组件是一个单独功能模块的封装:
