--- a/vue/组件/组件化开发/2020年7月1日-父组件与子组件的区分.html
+++ b/vue/组件/组件化开发/2020年7月1日-父组件与子组件的区分.html
@@ -13,7 +13,7 @@
       <!-- 在作用域中使用组件时, 必须先使用components注册 -->
     </div>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       // 1. 创建第一个组件
       const cpn1 = Vue.extend({ // 子组件
