--- a/vue/组件/组件化开发/2020年7月1日-组件的基本使用.html
+++ b/vue/组件/组件化开发/2020年7月1日-组件的基本使用.html
@@ -11,7 +11,7 @@
       <my-cpn></my-cpn> 
     </div>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       // 1. 创建组件构造器对象
       const cpnC = Vue.extend({
