--- a/vue/组件/组件化开发/2020年7月20日-(掌握)父访问子-children-refs.html
+++ b/vue/组件/组件化开发/2020年7月20日-(掌握)父访问子-children-refs.html
@@ -21,7 +21,7 @@
       <div>我是子组件1</div>
     </template>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       /*
         在父组件中拿到子组件的对象
