--- a/vue/组件/组件化开发/2020年7月14日-子数据传父.html
+++ b/vue/组件/组件化开发/2020年7月14日-子数据传父.html
@@ -22,7 +22,7 @@
       </div>
     </template>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       // 子组件
       const cpn = {
