--- a/vue/组件/组件化开发/2020年7月14日-父传子props中的驼峰标识.html
+++ b/vue/组件/组件化开发/2020年7月14日-父传子props中的驼峰标识.html
@@ -23,7 +23,7 @@
       </div>
     </template>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       const cpn = {
         template: '#cpn',
