--- a/vue/组件/组件化开发/2020年7月16日-父子组件通信-结合双向绑定.html
+++ b/vue/组件/组件化开发/2020年7月16日-父子组件通信-结合双向绑定.html
@@ -43,8 +43,8 @@
     </div>
   </template>
 
-  <script src="../vue.js"></script>
-  <script>
+    <script src="../../vue.js" ></script>
+    <script>
     const app = new Vue({
       el: '#app',
       data: {
