--- a/vue/组件/组件化开发/2020年7月1日-局部组件1.html
+++ b/vue/组件/组件化开发/2020年7月1日-局部组件1.html
@@ -17,7 +17,7 @@
       <cpn></cpn>
     </div>
     
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       // 1. 创建组件构造器
       const cpnC = Vue.extend({
