--- a/vue/组件/组件化开发/2020年7月1日-组件模板抽离的方法.html
+++ b/vue/组件/组件化开发/2020年7月1日-组件模板抽离的方法.html
@@ -30,8 +30,8 @@
   </template>
 
 
-  <script src="../vue.js"></script>
-  <script>
+    <script src="../../vue.js" ></script>
+    <script>
     // 组件模板的分离写法
 
     Vue.component('cpn0', {
