--- a/vue/组件/组件化开发/2020年7月1日-组件注册的语法糖.html
+++ b/vue/组件/组件化开发/2020年7月1日-组件注册的语法糖.html
@@ -12,7 +12,7 @@
       <cpn2></cpn2>
     </div>
 
-    <script src="../vue.js" ></script>
+    <script src="../../vue.js" ></script>
     <script>
       // 1. 创建组件构造器
       /*const cpnC = Vue.extend({
