--- a/vue/模块化开发/vue-cli/Promise/00-Promise的基本使用.html
+++ b/vue/模块化开发/vue-cli/Promise/00-Promise的基本使用.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> title </title>
+    <title> 00-Promise的基本使用 </title>
   </head>
 
   <body>
@@ -76,6 +76,7 @@
         // 处理
         console.info(data);
       }).catch( (err) => {
+        console.info(err);
 
       })/* .catch( err => {}) // 箭头函数在只有一个参数时, '()' 可以省略 */;
 
